@@ -17,6 +17,7 @@ Bugs fixed
 * #2775: Fix failing linkcheck with servers not supporting identidy encoding
 * #2833: Fix formatting instance annotations in ext.autodoc.
 * #1911: ``-D`` option of ``sphinx-build`` does not override the ``extensions`` variable
+* #2789: `sphinx.ext.intersphinx` generates wrong hyperlinks if the inventory is given
 
 Release 1.4.5 (released Jul 13, 2016)
 =====================================
